dataset1235/2025-2/2318198438/users/1240871306/executions/1897677159_3455942218.log
== RUN (2025-08-28 00:09:59)
-- CODE: 
preço do jogo  = float(input( "valor unitario":))
dinheiro = float(input("8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:44:47)
-- CODE: 
preço do jogo  = float(inpu(* 8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:46:59)
-- CODE: 
preço do jogo  = float(inpu( preço do jogo 8 + 45))
dinheiro = float(input(dinheiro total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:45:05)
-- CODE: 
preço do jogo  = float(inpu( 8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:23:13)
-- CODE: 
preço do jogo  = float(input( "*8":))
dinheiro = float(input("*8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:53:16)
-- CODE: 
preço do jogo  = float(input( 8 + 45))
dinheiro = float(input(45))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:53:14)
-- CODE: 
preço do jogo  = float(input( 8 + 45))
dinheiro = float(input(45))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:44:30)
-- CODE: 
preço do jogo  = float(inpu(*8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:04:16)
-- CODE: 
preço do jogo  = float(input( "8 + 45"))
dinheiro = float(input("45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:47:00)
-- CODE: 
preço do jogo  = float(inpu( preço do jogo 8 + 45))
dinheiro = float(input(dinheiro total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:15)
-- CODE: 
preço do jogo  = float(input( "*8":))
dinheiro = float(input("*8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:10)
-- CODE: 
preço do jogo  = float(input( "*8":))
dinheiro = float(input("*8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:44:32)
-- CODE: 
preço do jogo  = float(inpu(*8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:52:38)
-- CODE: 
preço do jogo  = float(inpu( 8 + 45))
dinheiro = float(input(45))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:53:01)
-- CODE: 
preço do jogo  = float(input( 8 + 45))
dinheiro = float(input(45))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:53:42)
-- CODE: 
preço do jogo  = float(input( 8 + 45))
dinheiro = float(input(45))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:04:17)
-- CODE: 
preço do jogo  = float(input( "8 + 45"))
dinheiro = float(input("45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:00:36)
-- CODE: 
preço do jogo  = float(input( "valor unitario":))
dinheiro = float(input("8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:49:25)
-- CODE: 
preço do jogo  = float(input( "valor unitario":))
dinheiro = float(input("8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "valor unitario":))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:53:41)
-- CODE: 
preço do jogo  = float(input( 8 + 45))
dinheiro = float(input(45))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:48:31)
-- CODE: 
preço do jogo  = float(inpu( preço do jogo 8 + 45))
dinheiro = float(input(dinheiro total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:12:36)
-- CODE: 
preço do jogo  = float(input( "8 + 45"))
dinheiro = float(input("45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:53:00)
-- CODE: 
preço do jogo  = float(input( 8 + 45))
dinheiro = float(input(45))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:12:34)
-- CODE: 
preço do jogo  = float(input( "8 + 45"))
dinheiro = float(input("45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "8 + 45"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:12)
-- CODE: 
preço do jogo  = float(input( "*8":))
dinheiro = float(input("*8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:44:34)
-- CODE: 
preço do jogo  = float(inpu(*8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(*8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:44:46)
-- CODE: 
preço do jogo  = float(inpu(* 8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:23:09)
-- CODE: 
preço do jogo  = float(input( "*8":))
dinheiro = float(input("*8 + 45"))

print(round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(input( "*8":))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:45:07)
-- CODE: 
preço do jogo  = float(inpu( 8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:52:40)
-- CODE: 
preço do jogo  = float(inpu( 8 + 45))
dinheiro = float(input(45))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:45:03)
-- CODE: 
preço do jogo  = float(inpu( 8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:44:49)
-- CODE: 
preço do jogo  = float(inpu(* 8 + 45))
dinheiro = float(input(- total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu(* 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:48:30)
-- CODE: 
preço do jogo  = float(inpu( preço do jogo 8 + 45))
dinheiro = float(input(dinheiro total ))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( preço do jogo 8 + 45))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:52:42)
-- CODE: 
preço do jogo  = float(inpu( 8 + 45))
dinheiro = float(input(45))

print( round(total, 1))
peint(round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    preço do jogo  = float(inpu( 8 + 45))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
